--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "winston": "^3.3.3"
   },
   "description": "",
