--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
+    "moment": "^2.29.0",
     "mongoose": "^5.10.6",
     "winston": "^3.3.3"
   },
