--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@tippyjs/react": "^4.2.0",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "js-cookie": "^2.2.1",
@@ -23,6 +24,7 @@
     "react-uid": "^2.3.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "yup": "^0.29.3"
   },
   "scripts": {
