--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,9 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll": "^1.8.1",
     "react-uid": "^2.3.0",
+    "react-visibility-sensor": "^5.1.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
