--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
+    "socket.io-client": "^2.3.1",
     "yup": "^0.29.3"
   },
   "scripts": {
