--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
     "mongoose": "^5.10.6",
+    "socket.io": "^2.3.0",
     "winston": "^3.3.3"
   },
   "description": "",
