--- a/angular-client/tsconfig.json
+++ b/angular-client/tsconfig.json
@@ -10,7 +10,13 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports":true,
     "target": "es2015",
+    "types": ["node"], 
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "module": "es2020",
     "lib": [
       "es2018",
